# Dr_Render

./: .gitignore  CMakeLists.txt  Light.h  Model.h  README.md  Render.h  main.cpp
include/: Geometry.h  Image.h  Light.h  Matrix.h  Model.h  Render.h  tgaimage.h
src/: Image.cpp  Light.cpp  Model.cpp  Render.cpp  main.cpp  playground.cpp  tgaimage.cpp
